tests/e2e/keyword_not_service_argument2.error
Error: syntax error in story at line 1, column 21

1|    http fetch url: ""  not : ""
                          ^^^^^^^^

E0141: http action `fetch` does not accept argument `not`.
